5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1664_2967.log
== SUBMITION (2019-04-16 10:09:16) 
-- CODE:
a1 = 1.37
if (x >= a1):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.121799
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 2, in <module>
    if (x >= a1):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:17) 
-- CODE:
a1 = 1.37
if (x >= a1):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a1):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:10:32) 
-- CODE:
a = float(input(1.37))
if ( >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.182619
-- ERROR:
  File "/home/codebench/codes/1664/2967/main.py", line 2
    if ( >= a):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:33) 
-- CODE:
a = float(input(1.37))
if ( >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
File "XXXX", line 2
    if ( >= a):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:10:43) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.217595
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:44) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:46) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:47) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:47) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:48) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:48) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:48) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:10:49) 
-- CODE:
a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.112514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:14) 
-- CODE:
a = int(float(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:17) 
-- CODE:
a = int(float(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:11:18) 
-- CODE:
a = int(float(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.147441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 2, in <module>
    if (x >= a):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:23) 
-- CODE:
am1 = float(input("digite sua altura: "))


a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:12:24) 
-- CODE:
am1 = float(input("digite sua altura: "))


a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.167942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:12:25) 
-- CODE:
am1 = float(input("digite sua altura: "))


a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:02) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = float(input(1.37))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:13:03) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.138641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 4, in <module>
    a = float(input(1.37))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:13:03) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = float(input(1.37))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:13:16) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.171747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 4, in <module>
    a = float(input(1.37))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:36) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input(1.37))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    al = float(input(1.37))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:59) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input("1.37"))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    al = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:16:01) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input("1.37"))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.173212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 4, in <module>
    al = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:01) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input("1.37"))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    al = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:03) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input("1.37"))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    al = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:04) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input("1.37"))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    al = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:16:04) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

al = float(input("1.37"))
if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    al = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:57) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))


if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:18:58) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))


if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.133632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:59) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))


if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:06) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))


if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:28) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:26:29) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.13997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 6, in <module>
    if (x >= a):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:30) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:30) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (x >= a):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:26:45) 
-- CODE:
am1 = float(int("digite sua altura: "))
am2 = float(int("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    am1 = float(int("digite sua altura: "))
ValueError: invalid literal for int() with base 10: 'digite sua altura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:27:03) 
-- CODE:
am1 = float("digite sua altura: "))
am2 = float("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
File "XXXX", line 1
    am1 = float("digite sua altura: "))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:27:07) 
-- CODE:
am1 = float("digite sua altura: "))
am2 = float("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.137028
-- ERROR:
  File "/home/codebench/codes/1664/2967/main.py", line 1
    am1 = float("digite sua altura: "))
                                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:27:07) 
-- CODE:
am1 = float("digite sua altura: "))
am2 = float("digite sua altura: "))

a = 1.37

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
File "XXXX", line 1
    am1 = float("digite sua altura: "))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:29:45) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: sim)

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
File "XXXX", line 4
    a = float("altura sufuciente: sim)
                                     ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:29:59) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: sim")

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = float("altura sufuciente: sim")
ValueError: could not convert string to float: 'altura sufuciente: sim'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:30:08) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: sim")

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.155735
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 4, in <module>
    a = float("altura sufuciente: sim")
ValueError: could not convert string to float: 'altura sufuciente: sim'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:28) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: s/n")

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = float("altura sufuciente: s/n")
ValueError: could not convert string to float: 'altura sufuciente: s/n'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:30:29) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: s/n")

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.151279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 4, in <module>
    a = float("altura sufuciente: s/n")
ValueError: could not convert string to float: 'altura sufuciente: s/n'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:30:30) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: s/n")

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = float("altura sufuciente: s/n")
ValueError: could not convert string to float: 'altura sufuciente: s/n'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:28) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = float("altura sufuciente: ")

if (x >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = float("altura sufuciente: ")
ValueError: could not convert string to float: 'altura sufuciente: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:52) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:32:56) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = sim
else: 
	mensagem = nao
-- EXECUTION TIME:
0.102766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1664/2967/main.py", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:32:57) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = sim
else: 
	mensagem = nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:30) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:33:31) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"
-- EXECUTION TIME:
0.172415
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:33:32) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:33:43) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"
-- EXECUTION TIME:
0.119543
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:33:44) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"
-- EXECUTION TIME:
0.172565
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:34:26) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mensagem = nao
NameError: name 'nao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:36:24) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"

print("am2")
-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:36:26) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"

print("am2")
-- EXECUTION TIME:
0.215277
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
am2
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
am2
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
am2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:36:27) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"

print("am2")
-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:32) 
-- CODE:
am1 = float(input("digite sua altura: 1.37"))
am2 = float(input("digite sua altura: 1.50"))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:37:34) 
-- CODE:
am1 = float(input("digite sua altura: 1.37"))
am2 = float(input("digite sua altura: 1.50"))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- EXECUTION TIME:
0.128865
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:35) 
-- CODE:
am1 = float(input("digite sua altura: 1.37"))
am2 = float(input("digite sua altura: 1.50"))

a = 1.37

if (am1 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:04) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:40:05) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- EXECUTION TIME:
0.146577
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:06) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:07) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:07) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:08) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:40:08) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "sim"
else: 
	mensagem = "nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:00) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:43:02) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- EXECUTION TIME:
0.162987
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:03) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:43:27) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- EXECUTION TIME:
0.123257
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:43:29) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:43:57) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- EXECUTION TIME:
0.223679
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:08) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- OUTPUT:
am2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:19) 
-- CODE:
am1 = float(input("digite sua altura: "))
am2 = float(input("digite sua altura: "))

a = 1.37

if (am1, am2 >= a):
	mensagem = "Sim"
else: 
	mensagem = "Nao"


-- EXECUTION TIME:
0.171447
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:

-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:

-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
